--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,8 @@
+@use "./freamwork.scss";
+
 :root {
     --main_color: #263879;
+    --background_light: #3c57ba;
 }
 
 * {
@@ -39,5 +42,31 @@ input[type="number"]::-webkit-inner-spin-button {
 @media (max-width: 767px) {
     * {
         cursor: none !important;
+    }
+}
+
+
+.control {
+    @extend %flex-center-center;
+    gap: 10px;
+
+    button {
+        @extend %flex-center-center;
+        border: none;
+        background-color: transparent;
+        font-size: 20px;
+        cursor: pointer;
+
+        &.show {
+            color: #00b4ff;
+        }
+
+        &.edit {
+            color: #ffc107;
+        }
+
+        &.del {
+            color: #f44336;
+        }
     }
 }
