--- a/src/components/PersonFormSection/PersonFormSection.scss
+++ b/src/components/PersonFormSection/PersonFormSection.scss
@@ -64,44 +64,65 @@
         }
     }
 
-    .main-image {
-        position: relative;
+    .files {
         margin-block: 20px;
-        width: 200px;
-        margin-inline: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
 
-        h4 {
-            text-align: center;
-            margin-bottom: 10px;
-        }
+        .main-image {
+            position: relative;
+            width: 200px;
 
-        label {
-            width: 100%;
-            height: 150px;
-            border: 1px solid #DDD;
-            cursor: pointer;
-            padding: 15px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 15px;
-            border-radius: 10px;
-        }
+            h4 {
+                text-align: center;
+                margin-bottom: 10px;
+            }
 
-        .remove-image {
-            position: absolute;
-            top: 45px;
-            right: 8px;
-            background: brown;
-            border: none;
-            padding: 4px;
-            border-radius: 4px;
-            cursor: pointer;
-            color: #FFF;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 20px;
+            label {
+                width: 100%;
+                height: 150px;
+                border: 1px solid #DDD;
+                cursor: pointer;
+                padding: 15px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 15px;
+                border-radius: 10px;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                    border-radius: 8px;
+                }
+
+                span {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
+                    gap: 10px;
+                }
+            }
+
+            .remove-image {
+                position: absolute;
+                top: 5px;
+                right: 8px;
+                background: brown;
+                border: none;
+                padding: 4px;
+                border-radius: 4px;
+                cursor: pointer;
+                color: #FFF;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 20px;
+            }
         }
     }
 }
